Make sure eXo is not visible when not active.

--- a/css/exo.core.scss
+++ b/css/exo.core.scss
@@ -11,27 +11,13 @@ html.exo-exists{
   }
 
   body{
-    // overflow:hidden;
     height:100%;
     width:100%;
-    // background:#333333;
-    // opacity:0;
-    // @include transition(opacity 3000ms);
-  }
-
-  #exo-wrapper{
-    // position: absolute;
-    // top:0;
-    // left:0;
-    // z-index:9999;
-    // width: 100%;
-    // height: 100%;
-    // overflow:hidden;
-    // @include perspective(1200px);
   }
 
   #exo-loading{
     background: rgba(#000, .3);
+    display:none;
     position:fixed;
     top:0;
     right:0;
@@ -47,35 +33,9 @@ html.exo-exists{
     }
   }
 
-  // #exo-page{
-  //   overflow: auto;
-  // }
-
-  // .exo-page{
-  //   width: 100%;
-  //   height: 100%;
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   visibility: hidden;
-  //   z-index:9999;
-  //   @include backface-visibility(hidden);
-  //   @include transform(translate3d(0, 0, 0));
-  //   @include transform-style(preserve-3d);
-  // }
-
-  // .exo-page-current,
-  // .no-js .exo-page {
-  //   visibility: visible;
-  //   z-index: 1;
-  // }
-
-  // .exo-page-ontop {
-  //   z-index: 1000;
-  // }
-
   // Frame Wrapper
   #exo{
+    display:none;
     position:fixed;
     top:0;
     left:0;
@@ -115,6 +75,7 @@ html.exo-exists{
 
     #exo-loading,
     #exo{
+      display:block;
       z-index:9999;
     }
   }
